# universal-re-agent

./: .env.example  .gitignore  README.md  STATE.md  bench_result_v2.json  bench_result_v3.json  compile_advanced.py  compile_one.bat  compile_targets.py  config.yaml  do_re.py  do_re_fast.py  do_re_v3.py  frida_mcp_server.py  ghidra_mcp_server.py  model_bench.py  overnight_burn.py  pyproject.toml  re-skill-pipeline.jsx  run_headless_bench.py  run_mock.py  run_nexus_bench.py  run_rag_test.py  test_scoring_v2.py
.claude-flow/: .trend-cache.json
data/: identity.json
docs/: ARCHITECTURE_DIAGRAMS.md  BEFORE_AFTER_EXAMPLES.md  COMPLETION_SUMMARY.md  DELIVERY_SUMMARY.md  DETECTION_QUICK_REFERENCE.md  INDEX.md  INTEGRATION_GUIDE.md  OPTIMIZATION_IMPLEMENTATION_GUIDE.md  PROMPTING_INDEX.md  PROMPTING_SUMMARY.md  README_OPTIMIZATION.md  advanced_pe_analysis.md  binary_similarity_design.md  ghidra_advanced_apis.md  model_capability_design.md  multi_agent_pipeline.md  obfuscation_gap_analysis.md  performance_optimization.md  prompting_implementation_guide.py  prompting_strategies.md
dynamic_re/: .gitignore  01_enable_ssh.ps1  02_recon.ps1  03_nuitka_introspect.py  04_memory_dump.py  05_sitecustomize.py  06_run_all.ps1  07_analyze_dump.py  08_traffic_capture.py  09_start_sniff.py  10_windivert_sniff.py  11_smart_sniff.py  12_deploy_sniff.py  12b_run_sniff.py  13_run_sniff.py  14_mitm_adspower.py  15_frida_sniff.py  README.txt  STATE.md  _frida_test.py  fix_server.py  ssh_helper.py
ghidra_scripts/: DumpAnalysis.java
re_burn/: __init__.py  auto_gt_generator.py  burn_monitor.py  (+11 more)
(+768 files in other folders)
