[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "universal-re-agent"
version = "0.1.0"
description = "Multi-agent AI-powered reverse engineering system: Orchestrator + Static Analyst + Dynamic Analyst + Code Interpreter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "chromadb>=0.5.0",
    "ollama>=0.3.0",
    "lief>=0.15.0",
    "pefile>=2023.2.7",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

[project.scripts]
re-agent = "src.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
